--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <title>OhMyFood</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="loader"></div>
     <header class="header">
         <div class="logo">
-            <img src="../images/logo/ohmyfood@2x.svg" alt="logo">
+            <img src="./images/logo/ohmyfood@2x.svg" alt="logo">
         </div>
     </header>
     <main>
@@ -74,9 +74,9 @@
             </div>
             <div class="contenaire_restau">
                 <div class="card_restau">
-                    <a href="page3.html">
+                    <a href="./Page/la_palette_du_gout.html">
                         <span class="nouveau">Nouveau</span>
-                        <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaut1" class="photo_restaut">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaut1" class="photo_restaut">
                         <div class="footer_card">
                             <p class="titre_card">La palette du goût</p>
                             <p>Ménilmontant</p>
@@ -88,9 +88,9 @@
                     </div>
                 </div>
                 <div class="card_restau">
-                    <a href="page4.html">
+                    <a href="./Page/la_note_enchantee.html">
                         <span class="nouveau">Nouveau</span>
-                        <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaut2" class="photo_restaut">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaut2" class="photo_restaut">
                         <div class="footer_card">
                             <p class="titre_card">La note enchantée</p>
                             <p>Charonne</p>
@@ -102,8 +102,8 @@
                     </div>
                 </div>
                 <div class="card_restau">
-                    <a href="page2.html">
-                        <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaut3" class="photo_restaut">
+                    <a href="./Page/a_la_française.html">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaut3" class="photo_restaut">
                         <div class="footer_card">
                             <p class="titre_card">A la française</p>
                             <p>Cité Rouge</p>
@@ -115,8 +115,8 @@
                     </div>
                 </div>
                 <div class="card_restau">
-                    <a href="page5.html">
-                        <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaut4" class="photo_restaut">
+                    <a href="./Page/le_delice_des_sens.html">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaut4" class="photo_restaut">
                         <div class="footer_card">
                             <p class="titre_card">Le délice des sens</p>
                             <p>Folie-Méricourt</p>
